/*
 * CHANGELOG.
 */

10272006 - FLAC 1.1.3 breaks their API _again_, so we try to do the right
           thing at build time. (Thanks, Josh!).
07282006 - Ogg Vorbis decoding defaults to system byte order now.
05122006 - Patched to get mpglib compiling again (thanks, Sam!).
03312006 - Wedged in a temporary hack for Speex rewinding.
12172005 - Fixed gcc4 whining in playsound_simple.c.
12062005 - Trimmed a bunch of junk out of the build system, and now it works
           on Mac OS X again.
10122005 - Check for libmodplug headers in two possible places (thanks, Tyler!)
10012005 - Added playsound_simple.c.
09142005 - Happy September. Patched smpeg.c and some other things to compile.
01062005 - Fixed Project Builder project files (Thanks, Martin!)
11122004 - Fixed automake nonsense. Fixed logic bug in voc decoder.
07032004 - Removed altcvt from the source tree. Started pounding out initial
           mixer implementation.
05152004 - Added Sound_NewSampleFromMem(), and implementation of RWops pooling.
05112004 - Added Sound_GetDuration() and moved total_time out of Sound_Sample
           struct and into it's opaque data...this fixes binary compatibility
           with apps written for SDL_sound 1.0.
05082004 - Started 1.1.0 development branch with code to determine the total
           length of a sample (thanks to Wesley, Eric, Wang, and Ahilan!)...
           this patch was originally committed to CVS on 10252003, but it is
           getting re-merged in the svn repository. Fixed "bootstrap" to
           work with MacOSX.
05072004 - Backed out some commits, converted repository to Subversion, and
           branched off to a 1.1.0 development tree. Changed MikMod URL...old
           one is now a porn site.  :(
10252003 - VOC decoder was broken. Now it isn't.
10142003 - Build system fix: acinclude.m4 had some word wrapping badness.
10122003 - Fixed "make dist" behaviour to not packaged generated docs, and